--- a/WistGame/WebWist/Properties/launchSettings.json
+++ b/WistGame/WebWist/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:2620",
-      "sslPort": 44377
+      "applicationUrl": "http://localhost:3563/",
+      "sslPort": 44324
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "WebWist": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
